# qt-csv-viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: csvviewer.h
pkg/: PKGBUILD
src/: csvviewer.cpp  main.cpp
